client/src/app/contact/contact.component.css
body {
    padding-top: 56px;
    padding-bottom: 20px;
  }

h1{
  padding-top: 56px;
  font-size: 46px;
}
hr {
  margin-top: 4rem;
  margin-bottom: 4rem;
  margin-left: 20rem;
  margin-right: 20rem;
  border: 0;
  border-top: 2px solid rgba(0, 0, 0, 0.123);
}

.full-width {
  width: 100%;
  max-width: 500px;
}

.inputField{
  min-width: 150px;
  max-width: 500px;
  width: 100%;
}

